// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format API formatRelativeTime() falls back and warns when no value is provided 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatRelativeTime() options falls back and warns on invalid IntlRelativeFormat options 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatRelativeTime() options handles missing named formats and warns 1`] = `
Array [
  "UNSUPPORTED_FORMATTER",
]
`;
